fixed redundant .replace thingy